frontend/tests/errors/ER-008/chained_comparison_fixed/test.vx
// @rfc: doc/vexel-rfc.md#errors--diagnostics
// @desc: Parser requires explicit parentheses to disambiguate ambiguous expressions | Parentheses disambiguate comparison chains (positive test)


&^main() -> #i32 {
    ok:#b = (1 < 2) && (2 < 3);
    0;
}
